--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "devMode": "ng serve --host 0.0.0.0 --disableHostCheck true",
+    "devMode": "ng serve --ssl true",
     "postinstall": "ng build  --aot --prod"
   },
   "private": true,
